updated the total cost on the pdfs for receipt for payment, so new pdfs added... and updated the cta button on the check details page to 'continue'

--- a/app/views/v1/your-registration/check-details.html
+++ b/app/views/v1/your-registration/check-details.html
@@ -67,7 +67,7 @@
             </p>
             <a href="/v1/your-registration/choose-country">
               <button class="govuk-button" data-module="govuk-button">
-                Renew this licence
+                Continue
               </button>
             </a>
             <p class="govuk-!-padding-top-2">
