--- a/app/views/v1/your-registration/done/worldpay-confirm.html
+++ b/app/views/v1/your-registration/done/worldpay-confirm.html
@@ -32,7 +32,7 @@ What type of business or organisation are you?
           </div>
         </div>
 
-        <p>We’ve sent a registration confirmation and certificate to <a href="mailto:user@example.com">user@example.com</a>.</p>
+        <p>We’ve sent a registration confirmation and certificate to user@example.com.</p>
         <p> We will also send a receipt to the same email address once your payment has processed.</p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
@@ -56,7 +56,7 @@ What type of business or organisation are you?
         </p>
       </br>      </br>      </br>      </br>      </br>
 
-        <p><a href="/{{folder}}/wcr-magic-link/email-receipt" target="_blank">Testing link to payment received email</a></p>
+        <p><a href="/{{folder}}/wcr-magic-link/email-receipt-worldpay" target="_blank">Testing link to payment received email</a></p>
 
       </div>
 
