replaced licence with registration on two of the magic link flow initial pages

--- a/app/views/v1/wcr-magic-link/email-renew.html
+++ b/app/views/v1/wcr-magic-link/email-renew.html
@@ -54,9 +54,9 @@
         <a href="/v1/your-registration/about-to-renew.html" target="_blank">wastecarriersregistration.service.gov.uk/renew/782gkd57bdjs84hf</a>
       </h2>
 
-      <p>Licence number: CBDU130776</br></br>
+      <p>Registration number: CBDU130776</br></br>
 
-        If you no longer need a licence, you can ignore these reminders. You cannot transport, buy, sell or dispose of waste without a licence.</p></br>
+        If you no longer need a registration, you can ignore these reminders. You cannot transport, buy, sell or dispose of waste without a registration.</p></br>
 
         <p><img width="200" height="57" alt="" src="/public/images/ea_logo_sm.png"></p>
                                            
