--- a/app/views/v1/your-registration/check-details.html
+++ b/app/views/v1/your-registration/check-details.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You are about to renew your waste carrier licence
+  You are about to renew your waste carrier registration
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
@@ -37,11 +37,11 @@
               </thead>-->
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">Licence holder</td>
+                  <td class="govuk-table__cell">Registration holder</td>
                   <th scope="row" class="govuk-table__header">Waste Pros Ltd</th>
                 </tr>
                 <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">Licence number</td>
+                  <td class="govuk-table__cell">Registration number</td>
                   <th scope="row" class="govuk-table__header">CBDU130776</th>
                 </tr>
                 <tr class="govuk-table__row">
