test redirect for setting session data on a redirect

--- a/app/views/v1/your-registration/do-you-carry-waste.html
+++ b/app/views/v1/your-registration/do-you-carry-waste.html
@@ -26,7 +26,8 @@ Do you carry the waste?
 
                 <div class="govuk-form-group">
 
-                    <fieldset class="govuk-fieldset">
+                  {# permit|dump #}
+                  <fieldset class="govuk-fieldset">
 
                               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                 <h1 class="govuk-fieldset__heading">
