updates to email receipt emails to not mention checks, update index page and files with second iterations of the letters, to inc phone number, call info, letter signiture, teir rewording, removal or insecure link

--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -41,13 +41,18 @@ Waste carrier or broker prototype
             <li><a href="/{{versionxxx}}/wcr-magic-link/email-renew" target="_blank">WCR magic link renewal</a> <span style="margin-top:12pt;margin-bottom:0pt;border-left:8px">/v1/wcr-magic-link/email-renew</span></li>
           </ul>
           <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link v2</a> https://waste-carriers.herokuapp.com/public/images/magic-link-v2.pdf</li>
+          </ul>          <ul class="govuk-list govuk-list--bullet"> 
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Renewal letter magic link">Renewal letter QR v2</a> https://waste-carriers.herokuapp.com/public/images/qr-code-v2.pdf</li>
+          </ul>     
+          <ul class="govuk-list govuk-list--bullet"> 
             <li><a href="https://waste-carriers.herokuapp.com/public/images/magic-link.pdf" target="_blank" download="Renewal letter magic link">Renewal letter magic link</a> https://waste-carriers.herokuapp.com/public/images/magic-link.pdf</li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">    
             <li><a href="https://waste-carriers.herokuapp.com/public/images/redirect.pdf" target="_blank" download="Renewal letter redirect">Renewal letter redirect</a> https://waste-carriers.herokuapp.com/public/images/redirect.pdf</li>
           </ul>
           <ul class="govuk-list govuk-list--bullet"> 
-            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code.pdf" target="_blank" download="Renewal letter redirect and QR cod">Renewal letter redirect and QR code</a> https://waste-carriers.herokuapp.com/public/images/pqr-code.pdf</li>
+            <li><a href="https://waste-carriers.herokuapp.com/public/images/qr-code.pdf" target="_blank" download="Renewal letter redirect and QR cod">Renewal letter redirect and QR code</a> https://waste-carriers.herokuapp.com/public/images/qr-code.pdf</li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">
             {{ macros.list( "WCR registration", "/v1/your-registration/start-page" ) }}
