--- a/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
+++ b/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
@@ -70,7 +70,7 @@
           Your payment has been received
         </h1>
 
-        <p>A separate email will confirm your registration following any checks.</p>
+        <p>A separate email will confirm your registration.</p>
         <p>You’re not legally entitled to operate as a waste carrier until we have confirmed your registration.</p>
         <p>Download the email attachment for a print version of the receipt.
           </p>
