added new pages into the registration and renewal flow, company details eg name, address and number

--- a/app/views/v1/your-registration/confirm-renewal-details.html
+++ b/app/views/v1/your-registration/confirm-renewal-details.html
@@ -24,7 +24,7 @@ Confirmation of your renewal so far
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <!--<form action="/{{folder}}/your-registration/done/bacs-confirm" method="post">-->
+    <form action="/{{folder}}/your-registration/comp-no" method="post">
 
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
