updates to content following quick wireframe check

--- a/app/views/v1/your-registration/cya.html
+++ b/app/views/v1/your-registration/cya.html
@@ -139,7 +139,7 @@ Check your answers
       {% if permit.tier=="upper-tier" %}
 
       <h2 class="govuk-heading-m">Directors</h2>
-      <p>{{permit.directorFirstname}}</br>
+      <p>{{permit.directorFirstname}} 
          {{permit.directorLastname}}</br>
          {{permit.directorDOBday}} /
          {{permit.directorDOBmonth}} /
