--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -34,7 +34,7 @@ What type of business or organisation are you?
         </div>
 
         <div class="govuk-inset-text">
-          We cannot renew your registration you until your payment is processed.
+          We cannot register you until your payment is processed.
         </div>
         <h2 class="govuk-heading-m">Bank details</h2>
         <table class="govuk-table">
