--- a/app/views/v1/your-registration/address-manual-contact.html
+++ b/app/views/v1/your-registration/address-manual-contact.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What's the company address?
+What's the contact address?
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
@@ -28,7 +28,7 @@ What's the company address?
   <div class="govuk-grid-column-two-thirds">
 
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          What's the company address?
+          What's the contact address?
         </legend>
 
 
