--- a/app/views/v1/your-registration/new-registration.html
+++ b/app/views/v1/your-registration/new-registration.html
@@ -54,8 +54,8 @@ items: [
 </div>
 
 
-      <p> <a href="/{{folder}}/pages/privacy" target="_blank">Privacy: how we use your personal information (opens new tab)</a>
-    </p>
+      <!--<p> <a href="/{{folder}}/pages/privacy" target="_blank">Privacy: how we use your personal information (opens new tab)</a>
+    </p>-->
 
     <div class="govuk-form-group">
       {{ govukButton({
