change service name

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Register as a waste carrier or broker prototype
+  Register as a waste carrier prototype
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
@@ -23,7 +23,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Waste carrier or broker prototype
+        Waste carrier prototype
       </h1>
       <p class="govuk-body-l">This is not the live service, the live service is <a href="https://www.gov.uk/waste-carrier-or-broker-registration">register as a waste carrier or broker</a>. There is also <a href="https://www.wastecarriersregistration.service.gov.uk/">the renewal service</a>.</p>
       <p class="govuk-body">This prototype is for testing the online part of the waste carrier or broker registration and renewal service. It currently contains a happy path for Limited Companies registrations and renewals via magic link. <!--the complete user journey as per the live service, as well as specific deviations where we are trying out a new approach. Details on how to access all of this can be found in the handy table further down the page--></p>
