--- a/app/views/v1/your-registration/start-page.html
+++ b/app/views/v1/your-registration/start-page.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Waste carrier or broker prototype
+  Waste carrier prototype
 {% endblock %}
 {% block beforeContent %}
 <div class="govuk-phase-banner">
