--- a/app/views/index-v1.html
+++ b/app/views/index-v1.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Waste carrier or broker prototype
+Waste carrier prototype
 {% endblock %}
 
 {% set versionxxx = "v1" %}
