--- a/app/views/v1/your-registration/comp-no.html
+++ b/app/views/v1/your-registration/comp-no.html
@@ -35,12 +35,12 @@ What's the registration number of the company?
         </legend>
       
         <div class="govuk-form-group">
-          <label class="govuk-label" for="company-number">
+          <label class="govuk-label" for="companyNumber">
             Registration number<br/>
             </label>
             <p class="govuk-hint">An 8 digit number, or 2 letters followed by a 6 digit number</p>
 
-          <input class="govuk-input govuk-!-width-one-half" id="company-number" name="company-number" type="text">
+          <input class="govuk-input govuk-!-width-one-half" id="companyNumber" name="companyNumber" type="text">
         </div>
       
       </fieldset>
