--- a/app/views/v1/wcr-magic-link/bacs-email.html
+++ b/app/views/v1/wcr-magic-link/bacs-email.html
@@ -91,8 +91,14 @@
               <td style="padding-top: 10px; font-weight: bold">CBDU130776</td>
             </tr>
             <tr>
+              {% if permit.started=="no" %}
               <td style="padding-top: 10px;">Payment due</span></td>
               <td style="padding-top: 10px; font-weight: bold">£150.00</td>
+              {% endif %}
+              {% if permit.started=="yes" %}
+              <td style="padding-top: 10px;">Payment due</span></td>
+              <td style="padding-top: 10px; font-weight: bold">£110.00</td>
+              {% endif %}
             </tr>
 
           </tbody>
