--- a/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
+++ b/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
@@ -44,8 +44,13 @@
     </div>
     <div class="govuk-grid-column-one-quarter">
       <div id="email_text">
-        <a href="https://waste-carriers.herokuapp.com{{ imgpath }}receipt-for-payment.pdf" target="_blank" download="Payment receipt">
-         
+          {% if permit.started=="no" %}
+          <a href="https://waste-carriers.herokuapp.com{{ imgpath }}receipt-for-payment.pdf" target="_blank" download="Payment receipt">
+            {% endif %}
+          {% if permit.started=="yes" %}
+          <a href="https://waste-carriers.herokuapp.com{{ imgpath }}cardReceiptReg.pdf" target="_blank" download="Payment receipt">
+          {% endif %}
+   
        <img src="{{ imgpath }}pdf-icon.png" style="max-width: 80%;" alt="GOV.UK" />
       </a>
     </div>
@@ -96,7 +101,7 @@
         <table class="govuk-table">
           
           <tbody>
-             
+            {% if permit.started=="no" %}
             <tr>
               <td>Cost of renewal</td>
               <td>£105.00</td>
@@ -115,6 +120,24 @@
             <tr>
               <td style="padding-top: 10px;">VAT does not apply</td>
             </tr>
+            {% endif %}
+            {% if permit.started=="yes" %}
+
+            <tr>
+              <td>Cost of registration</td>
+              <td>£105.00</td>
+            </tr>
+            <tr>
+              <td style="padding-top: 10px;">Cost of registration card</td>
+              <td style="padding-top: 10px;">£5.00</td>
+            </tr>
+              <td style="padding-top: 10px;"><span style="font-weight: bold">Total paid</span></td>
+              <td style="padding-top: 10px;">£110.00</td>
+            </tr>
+            <tr>
+              <td style="padding-top: 10px;">VAT does not apply</td>
+            </tr>
+          {% endif %}
           </tbody>
         </table>
         <div class="govuk-section-break govuk-section-break--visible"></div>
