update to check answers to include copy around company number, adding in worldpay screens

--- a/app/views/v1/your-registration/cya.html
+++ b/app/views/v1/your-registration/cya.html
@@ -129,7 +129,7 @@ Check your answers
         <p>{{permit.companyName}}</br>
           {{permit.compAddress}}</br>
           {{permit.companyPost}}</br>
-        {{permit.companyNumber}}</p>     
+        Companies house number: {{permit.companyNumber}}</p>     
     </br>
     <hr>
   </br>
