--- a/app/views/v1/your-registration/reg-contact-email.html
+++ b/app/views/v1/your-registration/reg-contact-email.html
@@ -63,7 +63,7 @@ What’s the contact email address?
         <div class="govuk-form-group">
           <label class="govuk-label" for="conf_email_reg-contact">Confirm email address</br>
             </label>
-          <input type="text" class="govuk-input govuk-!-width-one-half" id="contactEmail" name="contactEmail"/>
+          <input type="text" class="govuk-input govuk-!-width-one-half" id="contactEmailconfirm" name="contactEmailconfirm"/>
         </div>
 
           
