--- a/app/views/v1/your-registration/pay/worldpay/worldpay-success.html
+++ b/app/views/v1/your-registration/pay/worldpay/worldpay-success.html
@@ -11,23 +11,23 @@
 
   <div id="worldpay-description">
     {% if permit.started=="no" %}
-    <p>Waste carrier renewal</p>
+    <p style="font: Arial, Helvetica, Sans-serif; font-size: medium;">Waste carrier renewal</p>
     {% endif %}
 
     {% if permit.started=="yes" %}
-    <p>Waste carrier registration</p>
+    <p style="font: Arial, Helvetica, Sans-serif; font-size: medium;">Waste carrier registration</p>
     {% endif %}
 
   </div>
 
     {% if permit.started=="no" %}
     <div id="worldpay-amount">
-      <p>£150.00</p>
+      <p style="font: Arial, Helvetica, Sans-serif; font-size: medium;">£150.00</p>
       </div>      
       {% endif %}
     {% if permit.started=="yes" %}
     <div id="worldpay-amount">
-      <p>£110.00</p>
+      <p style="font: Arial, Helvetica, Sans-serif; font-size: medium;">£110.00</p>
       </div>    
       {% endif %}
     
