added in worldpay success page, added in confirmation page for lower tier and registration complete email for upper and lower, updated routes for declaration page

--- a/app/views/v1/your-registration/done/bacs-confirm.html
+++ b/app/views/v1/your-registration/done/bacs-confirm.html
@@ -159,6 +159,7 @@ What type of business or organisation are you?
       <p><a href="/{{folder}}/wcr-magic-link/bacs-email" target="_blank">Testing link to pay by BACS email</a></p>
 
         <p><a href="/{{folder}}/wcr-magic-link/email-receipt" target="_blank">Testing link to payment received email</a></p>
+        <p><a href="/{{folder}}/wcr-magic-link/email-reg-confirm" target="_blank">Testing link to registration confirmed email</a></p>
 
       </div>
 
