--- a/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
+++ b/app/views/v1/wcr-magic-link/email-receipt-worldpay.html
@@ -70,7 +70,8 @@
           <div id="email_text">
 
       </br>
-<p>Dear Chris Jones,</p>
+      <p>Dear {{permit.contactFirstName}} 
+        {{permit.contactLastName}},</p>
         <h1 class="govuk-heading-m">
           Your payment has been received
         </h1>
@@ -81,7 +82,7 @@
           </p>
         <h2 class="govuk-heading-s">Receipt:</br>
       </h2>
-      <p>Receipt for renewal as a waste carrier, broker or dealer
+      <p>Receipt for registration as a waste carrier, broker or dealer
       </p>
 
       
